--- a/QuizApi/Web.config
+++ b/QuizApi/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="QuizDB" connectionString="Server=INBAGHLP01724\SQLEXPRESS;Database=QuizProject;Integrated Security=true;" providerName="" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
