--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,9 @@
     
      steps:
        - checkout
-       - run:
-          name: "Install project dependencies"
-          command: dotnet.exe restore 
+
        - run:
           name: "Run Build step"
-          command: dotnet.exe build -c Release -r win10-x64
+          command: dotnet.exe build 
                  
+ c
